src/pages/home/Home.scss
.HomePage{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  nav{
    position: fixed;
    top: 0;
    margin: auto;
    width: 100%;
    z-index: 1000;
    .logo{
      p{
        mix-blend-mode: difference;
        color: var(--gray-300);
      }
    }
  }
  .hero{
    padding: 256px var(--3m) 256px var(--3m);
    width: 100%;
    display: flex;
    align-items: center;
    overflow: hidden;
    flex-direction: column;
    gap: var(--3m);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    justify-content: center;
    background: var(--white);
    position: relative;
    border-radius: 0 0 40px 40px;
    *{
      width: max-content;
    }
  }
  .grabZone{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: var(--1m);
    z-index: 1;
    width: 100%;
    overflow: hidden;
    .pillule{
      position: relative;
      width: var(--10m);
      height: var(--1m);
      border-radius: 8px;
      background: var(--white);
    }
  }
  .pillule-wrap{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: 100%;
    flex-wrap: wrap;
    gap: var(--2m);
    .card{
      width: auto;
      padding: var(--2m) var(--3m);
      .titre6{
        text-align: center;
        white-space: nowrap;
      }
    }
  }
}

